# FishingStreams

./: .gitignore  BROWSER_OVERLAY_PLAN.md  CLAUDE.md  PROJECT_MAP.md
.claude/skills/pypeline-config-check/: SKILL.md  validate.py
BrowserSources/: catch-counter.html
MVP/: docker-compose.yml  readMe.md
MVP/config/: mediamtx.yml
MVP/gstreamer/: Dockerfile  overlay_pipeline.py  overlay_pipeline_DontTouchThisOneWorksWithRTMP_copy.py
MVP/gstreamer/Temp/: overlay_pipeline_working.py
Pypeline/: .dockerignore  Dockerfile  main.py  overlay_server.py  pyproject.toml  supervisord.conf
Pypeline/configs/: boat1.yaml
Pypeline/pypeline/: __init__.py  mediamtx.py  pipeline.py  rtsp_server.py
Pypeline/pypeline/branches/: __init__.py  audio.py  base.py  browser_overlay.py  compositor.py  mux.py  scoreboard.py  sinks.py  source.py  tee.py  video.py
Pypeline/pypeline/config/: __init__.py  audio.py  browser_overlay.py  mux.py  pipeline.py  rtsp.py  scoreboard.py  sinks.py  source.py  video.py
Pypeline/pypeline/overlays/: scoreboard_renderer.py
pypeline-stack/: .gitignore  docker-compose.yml
pypeline-stack/mediamtx/: Dockerfile  mediamtx.yml
pypeline-stack/overlays/: catch-counter.html
